Added and rendered  html templates

--- a/readme
+++ b/readme
@@ -1,3 +1,4 @@
+April 26, 2024 Friday
 A: SETUP ENVIRONMENT
     1: Install python
     2: start new project with virtual environment and activate it
